<resources>
    <string name="app_name">オカネナビ</string>
    <string name="create">Create</string>
    <string name="date">日付</string>
    <string name="time">時刻</string>
    <string name="time_format">%1$d:%2$d</string>
    <string name="place">場所</string>
    <string name="debit">借方</string>
    <string name="credit">貸方</string>
    <string name="debit_detail">借方明細</string>
    <string name="credit_detail">貸方明細</string>
    <string name="price">価格</string>
    <string name="yen">円</string>
    <string name="memo">メモ</string>
    <string name="cancel">キャンセル</string>
    <string name="save">保存</string>
    <string name="delete">削除</string>

    <string name="cw_24_image">右に回転</string>

    <string-array name="subjects">
<!--        <item>費用</item>
        <item>収益</item>
        <item>資産</item>
        <item>負債</item>
        <item>純資産</item>-->
        <item>🫕自炊</item>
        <item>🍔外食</item>
        <item>🧻生活用品</item>
        <item>🛋️備品</item>
        <item>🛃消費税</item>
        <item>🏦みずほ</item>
        <item>👛財布</item>
        <item>💰PayPay</item>
        <item>💳三井住友VISA</item>
        <item>💴固定給</item>
        <item>💴残業代</item>
    </string-array>
</resources>