<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.home.CreateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/date" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="@dimen/activity_horizontal_margin"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/hour_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/time_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/time" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/place" />

                <Space
                    android:layout_width="@dimen/activity_horizontal_margin"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/place_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/place_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/place"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/debit_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/debit_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/debit"
                        android:inputType="none"
                        android:padding="16dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_left_arrow" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/credit_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/credit_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/credit"
                        android:inputType="none"
                        android:padding="16dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/debit_detail_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/debit_detail_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/debit"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/price_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/price_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        android:inputType="number"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/yen" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/credit_detail_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/credit_detail_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/credit"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/memo_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/memo_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/memo"
                    android:inputType="textMultiLine"
                    android:minLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/photo_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                app:helperTextTextColor="@color/red">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="H,16:9"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/backgrounds/scenic" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/photo_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_camera"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Space
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:backgroundTint="@color/red" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>